cicd/ingresses/jenkins-ingress-nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-ingress-nginx
  namespace: cicd
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: lga-kube-jenkins
    http:
      paths:
      - backend:
          serviceName: jenkins-jenkins
          servicePort: 8080
        path: /
  - host: lga-kube-jenkins.pulsepoint.com
    http:
      paths:
      - backend:
          serviceName: jenkins-jenkins
          servicePort: 8080
        path: /
